# rsFarkle

./: Cargo.toml  README.md
backend/: farkle.rs  lib.rs
src/: main.rs
ui/: dice.rs  main.rs
