[package]
name = "farkle"
authors = ["Arc676/Alessandro Vinciguerra <alesvinciguerra@gmail.com>"]
license = "GPL-3.0-only"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = "0.3.21"
eframe = "0.20.1" # Gives us egui, epi and web+native backends
serde = { version = "1", features = ["derive"], optional = true }
rand = "0.8.5"

[lib]
name = "rsfarkle"
path = "backend/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "farkle"
path = "src/main.rs"

[features]
persistence = ["eframe/persistence", "serde"]
default = ["persistence"]
